syntax = "proto3";

option java_multiple_files = true;
option java_package = "jp.co.neosystem.grpc";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
  string last_name = 2;
}

message HelloReply {
  string message = 1;
}